// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context renders custom maxHeight 1`] = `
<div
  className="ax-context ax-context--top ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "20rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders custom width 1`] = `
<div
  className="ax-context ax-context--top ax-context--light"
  style={
    Object {
      "width": "20rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with defaultProps 1`] = `
<div
  className="ax-context ax-context--top ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with position bottom 1`] = `
<div
  className="ax-context ax-context--bottom ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with position left 1`] = `
<div
  className="ax-context ax-context--left ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with position right 1`] = `
<div
  className="ax-context ax-context--right ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with position top 1`] = `
<div
  className="ax-context ax-context--top ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with theme dark 1`] = `
<div
  className="ax-context ax-context--top ax-context--dark"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;

exports[`Context renders with theme light 1`] = `
<div
  className="ax-context ax-context--top ax-context--light"
  style={
    Object {
      "width": "14.5rem",
    }
  }
>
  <div
    className="ax-context__content"
    style={
      Object {
        "maxHeight": "30rem",
      }
    }
  >
    Lorem ipsum
  </div>
  <span
    className="ax-context__arrow"
  />
</div>
`;
